--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <h1 align="center" style="color:red;">Give my love girl -- 王宇</hl>
+    <h1 align="center" style="color:red;">Give my love girl -- 葛馨遥</hl>
 	<div id="mainDiv">
 		<div id="content">
 			<div id="code">
@@ -25,8 +25,8 @@
 				<span class="space"/><span class="comments">so I write some codes to celebrate our love.**/</span><br />
 				<br />
 				Boy i = <span class="keyword">new</span> Boy(<span class="string">"孔令远"</span>);<br />
-				Girl u = <span class="keyword">new</span> Girl(<span class="string">"王宇"</span>);<br />
-				<span class="comments">/** Jun 16, 2023, I told you I love you.**/ </span><br />
+				Girl u = <span class="keyword">new</span> Girl(<span class="string">"葛馨遥"</span>);<br />
+				<span class="comments">/** Dec 15, 2024, I told you I love you.**/ </span><br />
 				i.love(u);<br />
 				<span class="comments">/** Luckily, you accepted and became my girlfriend eversince.**/</span><br />
 				u.accepted();<br />
@@ -72,7 +72,7 @@
 		var offsetX = $("#loveHeart").width() / 2;
 		var offsetY = $("#loveHeart").height() / 2 - 55;
 		var together = new Date();
-		together.setFullYear(2023, 6, 16);
+		together.setFullYear(2024, 12, 15);
 		together.setHours(19);
 		together.setMinutes(0);
 		together.setSeconds(0);
