--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 		<div id="content">
 			<div id="code">
 			    <br />
-				<span class="space"/><span class="comments">/** I am a programmers,by my special way,</span><br />
-				<span class="space"/><span class="comments">so I write some codes to celebrate our love.**/</span><br />
+				<span class="space"/><span class="comments">我呢，很喜欢你，有多喜欢呢</span><br />
+				<span class="space"/><span class="comments">我有点说不明白，就是想对你好，想让你开心</span><br />
 				<br />
 				Boy i = <span class="keyword">new</span> Boy(<span class="string">"孔令远"</span>);<br />
 				Girl u = <span class="keyword">new</span> Girl(<span class="string">"葛馨遥"</span>);<br />
