--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 		<div id="content">
 			<div id="code">
 			    <br />
-				<span class="space"/><span class="comments">我呢，很喜欢你，有多喜欢呢</span><br />
-				<span class="space"/><span class="comments">我有点说不明白，就是想对你好，想让你开心</span><br />
+				<span/><span class="comments">我呢，很喜欢你，有多喜欢呢</span><br />
+				<span/><span class="comments">我有难形容，就是想对你好，想让你开心</span><br />
 				<br />
-				Boy i = <span class="keyword">new</span> Boy(<span class="string">"孔令远"</span>);<br />
-				Girl u = <span class="keyword">new</span> Girl(<span class="string">"葛馨遥"</span>);<br />
+				想和你有个结果的那种喜欢<br />
+				然后真心喜欢一个人真的会变得小心翼翼<br />
 				<span class="comments">/** Dec 15, 2024, I told you I love you.**/ </span><br />
 				i.love(u);<br />
 				<span class="comments">/** Luckily, you accepted and became my girlfriend eversince.**/</span><br />
