--- a/index.html
+++ b/index.html
@@ -21,37 +21,24 @@
 		<div id="content">
 			<div id="code">
 			    <br />
-				<span/><span class="comments">我呢，很喜欢你，有多喜欢呢</span><br />
-				<span/><span class="comments">我有难形容，就是想对你好，想让你开心</span><br />
-				<br />
-				想和你有个结果的那种喜欢<br />
-				然后真心喜欢一个人真的会变得小心翼翼<br />
-				<span class="comments">/** Dec 15, 2024, I told you I love you.**/ </span><br />
-				i.love(u);<br />
-				<span class="comments">/** Luckily, you accepted and became my girlfriend eversince.**/</span><br />
-				u.accepted();<br />
-				<span class="comments">/** Since then, I miss u every day.**/</span><br />
-				i.miss(u);<br />
-				<span class="comments">/** And take care of u and our love.**/</span><br />
-				i.takeCareOf(u);<br />
-				<span class="comments">/** You say that you won't be so easy to marry me.**/</span><br />
-				<span class="comments">/** So I keep waiting and you will.**/</span><br />
-				<span class="keyword">boolean</span> isHesitate = <span class="keyword">true</span>;<br />
-				<span class="keyword">while</span> (isHesitate) {<br />
-				<span class="placeholder"/>i.waitFor(u);<br />
-				<span class="placeholder"/><span class="comments">/** I think it is an important decision**/</span><br />
-				<span class="placeholder"/><span class="comments">/** and you should think it over.**/</span><br />
-				<span class="placeholder"/>isHesitate = u.thinkOver();<br />
-				<br />
-			    <span class="placeholder"/>i.beWith(u);<br />
-				<br />
-				<span class="placeholder"/>isHesitate = u.thinkOver();<br />
-				<br />
-			    <span class="placeholder"/>i.onlyLove(u);<br />
-				}<br />
-				<span class="comments">/* After a romantic wedding, we will live happily ever after.**/</span><br />
-				i.marry(u);<br />
-				i.liveHappilyWith(u);<br />
+			<span class="space"/><span >  我呢，很喜欢你，有多喜欢呢，我很难形容</span><br />
+				<span class="space"/><span >就是那种想对你好，想然后想让你开心，想和你有一个结果的那种喜欢。</span><br />
+				<br />然后喜欢一个人真的会变得小心翼翼，我总说我不会了，其实就是太喜欢啦！！！<br />
+				你说你羡慕爸爸妈妈的爱情<br />我希望你也会因为我羡慕自己的爱情。<br />
+				<span >说真的，遇到你就像礼物一样，</span><br />
+				希望你觉得遇到我也很幸运。<br />
+				<span ><br />猛烈的爱其实不太真实，我更喜欢持续长久而平淡的爱，</span><br />
+				我想你也是吧。<br />
+				<span class="">每个人的表达方式可能不同<br />
+				我不习惯说一些海誓山盟<br />
+				<span class="">但是我想说，我想和你一起，逛市场，买菜，做饭，刷碗</span><br />
+				一起看电影，探讨人性，讲外星人，玄学<br />
+				<span >一起散步，看海听歌</span><br />
+				<span >一起睡午觉，一起吃烤地瓜，超级超级多的事情呢。</span><br />
+				好多好多话想对你说，以后慢慢讲<br />一辈子其实也蛮久的啦~<br /><br />
+				<span >我看了黄道吉日，选了今天，腊月二十，宜签订合同。</span><br />
+				<span >所以我想换个身份继续交往，所以你可以做我女朋友嘛~~<br /><br />
+				一切都会越来越好的，祝愿我们所愿皆成真，福星永高照。<br />
 			</div>
 			<div id="loveHeart">
 				<canvas id="garden"></canvas>
