--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <h1 align="center" style="color:red;">关于我喜欢杨静绾这件事情💓</hl>
+    <h1 align="center" style="color：#ffca0085;">关于我喜欢杨静绾这件事情💓</hl>
 	<div id="mainDiv">
 		<div id="content">
 			<div id="code">
