--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						Lovely girl,I have fallen in love with you for
+						我们已经在一起
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
-						Love u forever and ever.<br/>
-						<div class="signature">konglingyuan</div>
+						你每次看到这些字的时候，都是我再想你<br/>而且想你很久很久啦～<br/>
+						<div class="signature">见字如面 孔令远</div>
 					</div>
 				</div>
 			</div>
