--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <h1 align="center" style="color：#ffca0085;">关于我喜欢杨静绾这件事情💓</hl>
+    <h1 align="center" style="color:#ffca0085;">关于我喜欢杨静绾这件事情💓</hl>
 	<div id="mainDiv">
 		<div id="content">
 			<div id="code">
@@ -59,7 +59,7 @@
 		var offsetX = $("#loveHeart").width() / 2;
 		var offsetY = $("#loveHeart").height() / 2 - 55;
 		var together = new Date();
-		together.setFullYear(2024,11,15);
+		together.setFullYear(2025,00,19);
 		together.setHours(19);
 		together.setMinutes(0);
 		together.setSeconds(0);
