--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					</div>
 					<div id="loveu">
 						你每次看到这些字的时候，都是我再想你<br/>而且想你很久很久啦～<br/>
-						<div class="signature">见字如面 孔令远</div>
+						<div class="signature1">见字如面 孔令远</div>
 					</div>
 				</div>
 			</div>
