--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<div id="code">
 			    <br />
 			<span class="space"/><span >  我呢，很喜欢你，有多喜欢呢，我很难形容</span><br />
-				<span class="space"/><span >就是那种想对你好，想然后想让你开心，想和你有一个结果的那种喜欢。</span><br />
+				<span class="space"/><span >就是那种想对你好，想让你开心，想和你一起经历好多事情，想和你有一个结果的那种喜欢。</span><br />
 				<br />然后喜欢一个人真的会变得小心翼翼，我总说我不会了，其实就是太喜欢啦！！！<br />
 				你说你羡慕爸爸妈妈的爱情<br />我希望你也会因为我羡慕自己的爱情。<br />
 				<span >说真的，遇到你就像礼物一样，</span><br />
@@ -60,7 +60,7 @@
 		var offsetY = $("#loveHeart").height() / 2 - 55;
 		var together = new Date();
 		together.setFullYear(2025,00,19);
-		together.setHours(19);
+		together.setHours(9);
 		together.setMinutes(0);
 		together.setSeconds(0);
 		together.setMilliseconds(0);
