--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				好多好多话想对你说，以后慢慢讲<br />一辈子其实也蛮久的啦~<br /><br />
 				<span >我看了黄道吉日，选了今天，腊月二十，宜签订合同。</span><br />
 				<span >所以我想换个身份继续交往，所以你可以做我女朋友嘛~~<br /><br />
-				一切都会越来越好的，祝愿我们所愿皆成真，福星永高照。<br />
+				一切都会越来越好的，祝我们所愿皆成真，福星永高照。<br />
 			</div>
 			<div id="loveHeart">
 				<canvas id="garden"></canvas>
