--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 				<span >一起散步，看海听歌</span><br />
 				<span >一起睡午觉，一起吃烤地瓜，超级超级多的事情呢。</span><br />
 				好多好多话想对你说，以后慢慢讲<br />一辈子其实也蛮久的啦~<br /><br />
-				<span >我看了黄道吉日，换了又换，定在今天，甲辰年，腊月十九，宜签订合同。</span><br />
-				<span >所以我想换个身份继续交往，所以你可以做我女朋友嘛~~希望下一个甲辰年我在你身边<br /><br />
+				<span >我看了黄道吉日，换了又换，定在今天<br />甲辰年，腊月十九，宜签订合同。</span><br />
+				<span >所以我想换个身份继续交往，所以你可以做我女朋友嘛~~<br />希望下一个甲辰年我在你身边<br /><br />
 				一切都会越来越好的，祝我们所愿皆成真，福星永高照。<br />
 			</div>
 			<div id="loveHeart">
