--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 				好多好多话想对你说，以后慢慢讲<br />一辈子其实也蛮久的啦~<br /><br />
 				<span >我看了黄道吉日，换了又换，定在今天<br />甲辰年，腊月十九，宜签订合同。</span><br />
 				<span >所以我想换个身份继续交往，所以你可以做我女朋友嘛~~<br />希望下一个甲辰年我还在你身边<br /><br />
-				一切都会越来越好的，祝我们所愿皆成真，福星永高照。<br />
+				一切都会越来越好的，祝我们所愿皆成真，福星永高照。<br /><br /><br /><br /><br /><br />
+					'我告诉你我喜欢你，并不是一定要和你在一起，只是希望今后的你，在遭遇人生低谷的时候，不要灰心，至少曾经有人被你的魅力所吸引，曾经是，今后也会是。'
 			</div>
 			<div id="loveHeart">
 				<canvas id="garden"></canvas>
